--- a/packages/as-image/src/components/style.module.scss
+++ b/packages/as-image/src/components/style.module.scss
@@ -10,7 +10,7 @@
     opacity: 0;
   }
 
-  overflow: hidden;
+  // overflow: hidden;
   position: relative;
   display: inline-block;
 
@@ -49,7 +49,7 @@
     
   img {
     width: 100%;
-    height: 100%;
+    height: auto;
     transition: opacity;
     vertical-align: bottom;
   }
