--- a/packages/image/src/components/style.module.scss
+++ b/packages/image/src/components/style.module.scss
@@ -23,7 +23,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -3;
+    // z-index: -3;
   }
 
   .image-placeholder-wrapper {
@@ -33,7 +33,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: -2;
+    // z-index: -2;
     .image-placeholder {
       position: relative;
       &.placeholder-loaded {
@@ -64,7 +64,7 @@
     opacity: 0 !important;
     left: 0;
     top: 0;
-    z-index: -1;
+    // z-index: -1;
   }
   img[srcset=""] { visibility: hidden; opacity: 0;}
   img.placeholder-loaded {
